# RustCRUD

./: .env  Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs  models.rs
